Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -766,21 +766,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-22-7af280c64f21>, line 2)",
+     "evalue": "unexpected indent (<ipython-input-23-85133ccfe8a6>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-7af280c64f21>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    m_values = list(map(lambda step: step['m'],descent_steps))\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-85133ccfe8a6>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    rss_result_values = list(map(lambda step: step['rss'], descent_steps))\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
     "#if descent_steps:\n",
-    "    m_values = list(map(lambda step: step['m'],descent_steps))\n",
+    "m_values = list(map(lambda step: step['m'],descent_steps))\n",
     "    rss_result_values = list(map(lambda step: step['rss'], descent_steps))\n",
     "    text_values = list(map(lambda step: 'cost curve slope: ' + str(step['slope']), descent_steps))\n",
     "    gradient_trace = trace_values(m_values, rss_result_values, text=text_values)\n",
